--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ spring.thymeleaf.suffix=.html
 
 spring.application.name=Bootstrap Spring Boot
 
-spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:mysql://localhost:3306/diploms
+spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.url=jdbc:mysql://localhost:3306/diplomas
 spring.datasource.username=jsUser
 spring.datasource.password=21111998
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
